--- a/app/composer.json
+++ b/app/composer.json
@@ -9,24 +9,24 @@
         }
     ],
     "require": {
-        "georgringer/news": "^11.4",
-        "helhum/typo3-console": "^8.0.3",
+        "georgringer/news": "dev-12-13",
+        "pti/pti": "dev-main as v5.0.0",
         "pti/pti-demo": "dev-main",
-        "typo3/cms-backend": "^12.4",
-        "typo3/cms-core": "^12.4",
-        "typo3/cms-extbase": "^12.4",
-        "typo3/cms-extensionmanager": "^12.4",
-        "typo3/cms-filelist": "^12.4",
-        "typo3/cms-filemetadata": "^12.4",
-        "typo3/cms-fluid": "^12.4",
-        "typo3/cms-frontend": "^12.4",
-        "typo3/cms-info": "^12.4",
-        "typo3/cms-install": "^12.4",
-        "typo3/cms-recordlist": "^12.4",
-        "typo3/cms-rte-ckeditor": "^12.4",
-        "typo3/cms-scheduler": "^12.4",
-        "typo3/cms-seo": "^12.4",
-        "typo3/cms-tstemplate": "^12.4"
+        "pti/pti-twig": "dev-main as v5.0.0",
+        "typo3/cms-backend": "^13.4",
+        "typo3/cms-core": "^13.4",
+        "typo3/cms-extbase": "^13.4",
+        "typo3/cms-extensionmanager": "^13.4",
+        "typo3/cms-filelist": "^13.4",
+        "typo3/cms-filemetadata": "^13.4",
+        "typo3/cms-fluid": "^13.4",
+        "typo3/cms-frontend": "^13.4",
+        "typo3/cms-info": "^13.4",
+        "typo3/cms-install": "^13.4",
+        "typo3/cms-rte-ckeditor": "^13.4",
+        "typo3/cms-scheduler": "^13.4",
+        "typo3/cms-seo": "^13.4",
+        "typo3/cms-tstemplate": "^13.4"
     },
     "config": {
         "allow-plugins": {
@@ -41,7 +41,7 @@
             "ext-session": "1",
             "ext-tokenizer": "1",
             "ext-xml": "1",
-            "php": "8.2.8"
+            "php": "8.3.0"
         },
         "sort-packages": true
     }
