--- a/app/src/pti_demo/Configuration/Services.yaml
+++ b/app/src/pti_demo/Configuration/Services.yaml
@@ -2,10 +2,16 @@ services:
   _defaults:
     autowire: true
     autoconfigure: true
-    public: true
 
   PrototypeIntegration\Demo\:
     resource: '../Classes/*'
 
-  TYPO3\CMS\Extbase\Mvc\View\GenericViewResolver: '@PrototypeIntegration\Demo\ExtbaseViewResolver'
-  TYPO3\CMS\Extbase\Mvc\View\ViewResolverInterface: '@PrototypeIntegration\Demo\ExtbaseViewResolver'
+  TYPO3\CMS\Core\View\ViewFactoryInterface:
+    class: 'PrototypeIntegration\PrototypeIntegration\View\ViewFactory'
+    arguments:
+      $defaultViewFactory: '@TYPO3\CMS\Fluid\View\FluidViewFactory'
+
+  PrototypeIntegration\Demo\Processors\ContentElements\Ce01Text:
+    public: true
+  PrototypeIntegration\Demo\Processors\ContentElements\Ce03TextImage:
+    public: true
