--- a/app/composer.json
+++ b/app/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
+        "apache-solr-for-typo3/solr": "^13.0",
         "georgringer/news": "dev-12-13",
         "pti/pti": "dev-main as v5.0.0",
         "pti/pti-demo": "dev-main",
@@ -39,6 +40,7 @@
             "ext-json": "1",
             "ext-pdo": "1",
             "ext-session": "1",
+            "ext-simplexml": "1",
             "ext-tokenizer": "1",
             "ext-xml": "1",
             "php": "8.3.0"
