--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,9 @@ services:
     volumes:
       - ./app:/app
     networks:
-      - backend
+      backend:
+        aliases:
+          - pti-demo.test
     depends_on:
       - db
     environment:
@@ -42,5 +44,9 @@ services:
       MYSQL_USER: app
       MYSQL_PASSWORD: app
       MYSQL_DATABASE: app
+    networks:
+      - backend
+  solr:
+    image: typo3solr/ext-solr:12.0.5
     networks:
       - backend
